Added EmployeeOverview and EmployeeDetail components

--- a/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
+++ b/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
@@ -21,12 +21,17 @@ else
         <tbody>
             @foreach (var employee in Employees)
             {
-                <tr>
-                    <td><img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{employee.EmployeeId}-small.jpg")" class="rounded-circle" /></td>
-                    <td>@employee.EmployeeId</td>
-                    <td>@employee.FirstName</td>
-                    <td>@employee.LastName</td>
-                </tr>
+            <tr>
+                <td><img src="@($"https://gillcleerenpluralsight.blob.core.windows.net/person/{employee.EmployeeId}-small.jpg")" class="rounded-circle" /></td>
+                <td>@employee.EmployeeId</td>
+                <td>@employee.FirstName</td>
+                <td>@employee.LastName</td>
+                <td>
+                    <a href="@($"employeedetail/{employee.EmployeeId}")" class="btn btn-primary table-btn">
+                        Detail  
+                    </a>
+                </td>
+            </tr>
             }
         </tbody>
     </table>
