--- a/BethanysPieShopHRM.App/Pages/Index.razor
+++ b/BethanysPieShopHRM.App/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1 class="page-title">Welcome to Bethany's Pie Shop HRM!</h1>
+<br />
+<h3>Using this application, you can manage our wonderful staff working for us all over the world, bringing people the best pies ever!</h3>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
