--- a/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
+++ b/BethanysPieShopHRM.App/Pages/EmployeeOverview.razor
@@ -31,7 +31,7 @@ else
                         <i class="fas fa-info-circle"></i>
                     </a>
                     <a href="@($"employeeedit/{employee.EmployeeId}")" class="btn btn-primary table-btn">
-                        <i class="fas fa-edit-circle"></i>
+                        <i class="fas fa-edit"></i>
                     </a>
                 </td>
             </tr>
